--- a/materialtoast/src/main/res/layout/mt_main_layout.xml
+++ b/materialtoast/src/main/res/layout/mt_main_layout.xml
@@ -38,8 +38,8 @@
             android:id="@android:id/message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-            android:textSize="16sp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textSize="@dimen/mt_text_size"
             android:textColor="@android:color/black"/>
 
     </LinearLayout>
