--- a/materialtoast/src/main/res/layout/mt_main_layout.xml
+++ b/materialtoast/src/main/res/layout/mt_main_layout.xml
@@ -7,7 +7,7 @@
   ~ Last modified 21/12/18 18:30.
   -->
 
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="wrap_content"
@@ -25,7 +25,7 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <android.support.v7.widget.AppCompatImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/icon"
             android:layout_width="24dp"
             android:layout_height="24dp"
@@ -34,7 +34,7 @@
             android:scaleType="fitCenter"
             android:visibility="gone"/>
 
-        <android.support.v7.widget.AppCompatTextView
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@android:id/message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -44,4 +44,4 @@
 
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
